2005-01-18  Joel Sherrill <joel.sherrill@oarcorp.com>

PR target/19379
	* config/i386/i386.c (override_options): If the 80387 is disabled,
	then do not return FP values using FP registers.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@93833 138bc75d-0d04-0410-961f-82ee72b054a4